all function with all fucionality

--- a/src/app/main-structure/footer/footer.component.html
+++ b/src/app/main-structure/footer/footer.component.html
@@ -1,3 +1,7 @@
-<p>
-  footer works!
-</p>
+<footer class="bg-dark w-100 h-100 d-flex p-5">
+  <p class="text-light p-3">Horarios de atención: Lunes a Viernes de 09:00 a 14:00 y de 15:00 a 17:00 hs.</p>
+
+  <p class="text-light p-3">Dirección: Lateral Auxiliar Ruta 40, 2806, M5543, Las Heras, Mendoza</p>
+    
+  <p class="text-light p-3">Teléfono 261-4473012- Whatsapp 261-3820121</p>
+</footer>
