--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,12 @@
 <mat-sidenav-container class="example-container">
   <mat-sidenav mode="side" #sidenav>
-    <app-sidenav></app-sidenav>
+    <app-sidenav (sidenavClick)="sidenav.toggle()"></app-sidenav>
   </mat-sidenav>
   <mat-sidenav-content>
     <app-header (sidenavClick)="sidenav.toggle()"></app-header>
-    <router-outlet></router-outlet>
+    <main class="d-flex justify-content-center  align-items-center p-5 m-5">
+      <router-outlet></router-outlet>
+    </main>
     <app-footer></app-footer>
   </mat-sidenav-content>
 </mat-sidenav-container>
