--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
   </mat-sidenav>
   <mat-sidenav-content>
     <app-header (sidenavClick)="sidenav.toggle()"></app-header>
-    <main class="d-flex justify-content-center  align-items-center p-5 m-5">
+    <main>
       <router-outlet></router-outlet>
     </main>
     <app-footer></app-footer>
