--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -1,3 +1,10 @@
-<p>
-  products works!
-</p>
+<div class="container app-products d-flex flex-column flex-md-row justify-content-md-center align-items-center  mt-3 flex-wrap" >
+    
+  <div class="shelving pt-5 pb-2" *ngFor="let product of shelve" style="width: 350px;">
+    <h4 class="text-center">{{ product.name}}</h4>
+    <div class="img-container d-flex flex-column justify-content-end" style="width: 250px; height: 250px; ">
+      <img [src]="product.img" [alt]="product.name" class="img-fluid" style="max-width: 100%; max-height: 100%;">
+    </div>
+  </div>
+  
+</div>
