create a abut us page, create a favicon, create contact form

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,3 +1,52 @@
-<p>
-  about works!
-</p>
+<div class="jumbotron container">
+
+  <h1 class="display-1">Distribuciones Industriales</h1>
+
+  <p class="lead">Somos una empresa con más de 20 años de experiencia. Contamos con el prestigio de una buena historia
+    con la industria y sus clientes.</p>
+
+  <hr class="my-4">
+
+
+  <p>
+
+    Proporcionamos materiales y herramientas de calidad para la fabricación de muebles y sillas y la construcción en
+    seco.
+
+    También prestamos servicios de cortes de placas y pegados de canto.
+
+    Podemos asesorarlo para que lleve exactamente lo que está necesitando!
+
+  </p>
+
+</div>
+
+<div class="container f-flex flex-column align-items-center">
+  
+  <div class="row" >
+    <img class="col-4 img-fluid"   src="assets/nosotros/stock-placas-01.png" alt="stock de placas">
+    <img class="col-4 img-fluid"   src="assets/nosotros/stock-placas-02.png" alt="stock de placas">
+    <img class="col-4 img-fluid"   src="assets/nosotros/stock-placas-03.png" alt="stock de placas">
+  </div>
+  <br>
+  <div class="row" >
+    <img class="col-4 img-fluid"   src="assets/nosotros/stock-placas-04.png" alt="stock de placas">
+    <img class="col-4 img-fluid"   src="assets/nosotros/stock-placas-06.png" alt="stock de placas">
+    <img class="col-4 img-fluid"   src="assets/nosotros/stock-placas-07.png" alt="stock de placas">
+  </div>
+  <br>
+  <div class="row" >
+    <img class="col-4 img-fluid"   src="assets/nosotros/stock-placas-07.png" alt="stock de placas">
+    <img class="col-4 img-fluid"   src="assets/nosotros/stock-pintura-01.png" alt="stock de pintura">
+    <img class="col-4 img-fluid"   src="assets/nosotros/stock-adhesivos-08.png" alt="stock de adhesivos">
+  </div>
+  <br>
+  <div class="row" >
+    <img class="col-4 img-fluid"   src="assets/nosotros/herrajes-01.png" alt="stock de herrajes">
+    <img class="col-4 img-fluid"   src="assets/nosotros/adhesivo-contacto.png" alt="stock de cemento de contacto">
+    <img class="col-4 img-fluid"   src="assets/nosotros/deposito-01.png" alt="deposito">
+  </div>
+  <div class="row">
+    <img class="img-fluid" src="assets/nosotros/atencion-cliente.png" alt="atención al cliente">
+  </div>
+</div>
