--- a/src/app/main-structure/header/header.component.html
+++ b/src/app/main-structure/header/header.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color="primary" class="d-flex justify-content-between align-items-center">
   <div class="brand d-flex">
-    <button  mat-icon-button class="example-icon d-md-none" aria-label="Example icon-button with menu icon">
-      <mat-icon (click)="toggleSidenav()">menu</mat-icon>
+    <button style="margin-top: -6px;" mat-icon-button class="example-icon d-md-none" aria-label="Example icon-button with menu icon">
+      <mat-icon  (click)="toggleSidenav()">menu</mat-icon>
     </button>
     <!-- <div id="main-logo">
       <img  class="img-fluid" src="/assets/main-logo.jpg" alt="logo Disa Distribuciones Industriales">
