--- a/src/app/main-structure/footer/footer.component.html
+++ b/src/app/main-structure/footer/footer.component.html
@@ -1,7 +1,43 @@
-<footer class="bg-dark w-100 h-100 d-flex p-5">
-  <p class="text-light p-3">Horarios de atención: Lunes a Viernes de 09:00 a 14:00 y de 15:00 a 17:00 hs.</p>
+<footer class="bg-dark w-100 d-flex flex-column justify-content-between  align-items-center pt-4 px-4 pb-1">
 
-  <p class="text-light p-3">Dirección: Lateral Auxiliar Ruta 40, 2806, M5543, Las Heras, Mendoza</p>
-    
-  <p class="text-light p-3">Teléfono 261-4473012- Whatsapp 261-3820121</p>
+  <div class="d-flex flex-column flex-md-row">
+    <div>
+      <p class="text-light text-center font-weight-light p-5">Dirección: Lateral Auxiliar Ruta 40, 2806, M5543, Las Heras, Mendoza</p>
+    </div>
+    <div>
+      <p class="text-light text-center font-weight-light p-5">Horarios de atención: Lunes a Viernes de 08:30 a 14:00 y de 15:00 a 17:30 hs.</p>
+    </div>
+    <div>
+      <p class="text-light text-center font-weight-light p-5">Teléfono 261-4473012- Whatsapp 261-3820121</p>
+    </div>
+  </div>
+
+  <div>
+    <h2 class="text-center text-light">Donde econtrarnos:</h2>
+    <div class="d-flex justify-content-center py-5">
+      <a class="ml-5" target="_blank" href="https://www.facebook.com/disamaderas/?eid=ARB34pLk4Q0DDAVMOLUHLQxT6GmbQ1jVZJw4On79Jkkc2aN_F5eZ59IEXjAI-ZpAnTpqHF2hdafzD-a7"><img style="width: 45px" src="assets/icons/facebook.svg" alt="logo facebook"></a>
+      <a class="ml-5" target="_blank" href="https://www.instagram.com/disainsumos.mendoza/?igshid=10a70cd8jsvc5"><img style="width: 45px" src="assets/icons/instagram.svg" alt="logo instagram"></a>
+      <a class="ml-5" target="_blank" href="https://web.whatsapp.com/send?phone=5492613820126&text=Hola,%20me%20contacto%20desde%20la%20web"><img style="width: 45px" src="assets/icons/whatsapp.svg" alt="logo whatsapp"></a>
+    </div>
+  </div>
+
+  <!-- div flat-icon -->
+  <div class="text-white-50 mt-5">
+    <small class="smashicons" style="font-size: 0.8em;">
+      Icons made by
+      <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a
+        href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+    </small>
+  </div>
 </footer>
+
+<div id="whatsappButton" >
+
+  <a target="_blank"
+    href="https://web.whatsapp.com/send?phone=5492613820126&text=Hola,%20me%20contacto%20desde%20la%20web">
+    <img src="assets/icons/whatsapp.svg" alt="logo whatsapp" style="height: 45px;">
+    &nbsp;
+  </a>
+</div>
+
+<!-- <jjva-ngx-whatsapp-button [ngx_whatsapp_phone]="phone" [ngx_whatsapp_text]="title"></jjva-ngx-whatsapp-button> -->
