--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,53 +1,76 @@
-<div class="container d-flex  justify-content-center flex-column-reverse flex-md-row  align-items-center p-5" style="min-height: 400px;">
-  
-  <div class="map-container mr-3">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3353.0275999141627!2d-68.80008118415773!3d-32.8180336727207!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x967e052ec3d6e64f%3A0x54655e7d5f15ee2c!2sDISA!5e0!3m2!1ses-419!2sar!4v1606939177960!5m2!1ses-419!2sar" 
-      width="450" 
-      height="400" 
-      frameborder="0" style="border: solid 1px gainsboro;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+<div class="" style="min-height: 400px;">
+  <div class="header p-5 d-flex justify-content-center" style="background: url('assets/contacto/contacto.png');">
+    <h1 class="text-white font-weight-bold bg-dark p-4 shadow">CONTÁCTENOS</h1>
   </div>
 
-  <div class="ml-2 form-container d-flex flex-column align-items-center justify-content-center pt-5">
+  <div class="container pb-5">
 
 
-    <mat-spinner *ngIf="spinner"></mat-spinner>
+    <div class="d-flex justify-content-center flex-column-reverse flex-md-row  align-items-center p-5">
+      <div class="map-container mr-3">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3353.0275999141627!2d-68.80008118415773!3d-32.8180336727207!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x967e052ec3d6e64f%3A0x54655e7d5f15ee2c!2sDISA!5e0!3m2!1ses-419!2sar!4v1606939177960!5m2!1ses-419!2sar"
+          width="450" height="400" frameborder="0" style="border: solid 1px gainsboro;" allowfullscreen=""
+          aria-hidden="false" tabindex="0"></iframe>
+      </div>
 
-    <form *ngIf="!spinner && !sent" (ngSubmit)="sendMessage()" [formGroup]="contactForm" style="max-width: 400px;"
-      class="m-3 example-form d-flex flex-column align-itmes-center">
-
-      <mat-form-field class="m-2" appearance="fill">
-        <mat-label>Nombre: </mat-label>
-        <input matInput placeholder="Ingresa tu nombre" formControlName="fullName" required type="text">
-        <mat-error>Debe ingresar un nombre.</mat-error>
-      </mat-form-field>
-
-      <mat-form-field class="m-2" appearance="fill">
-        <mat-label>Email: </mat-label>
-        <input matInput placeholder="Ingresa tu email" formControlName="email" required type="email">
-        <mat-error>Ingrese un email.</mat-error>
-      </mat-form-field>
-
-      <mat-form-field class="m-2" appearance="fill">
-        <mat-label>Asunto:</mat-label>
-        <input matInput placeholder="Ingrese asunto" formControlName="subject" type="text">
-        <mat-error>No mas de 100 caracteres.</mat-error>
-      </mat-form-field>
+      <div class="ml-2 form-container d-flex flex-column align-items-center justify-content-center pt-5">
 
 
-      <mat-form-field appearance="fill">
-        <mat-label>Mensaje:</mat-label>
-        <textarea required matInput placeholder="Ingresa tu mensaje" formControlName="message"></textarea>
-      </mat-form-field>
+        <mat-spinner *ngIf="spinner"></mat-spinner>
 
-      <button type="submit" class="m-2 btn btn-info">Enviar</button>
-    </form>
+        <form *ngIf="!spinner && !sent" (ngSubmit)="sendMessage()" [formGroup]="contactForm" style="max-width: 400px;"
+          class="m-3 example-form d-flex flex-column align-itmes-center">
 
-    <div *ngIf="sent" class="pb-5">
-      <p>Hemos enviado su mensaje</p>
-      <button mat-raised-button color="accent" (click)="sendAgain()">Enviar otro mensaje</button>
+          <mat-form-field class="m-2" appearance="fill">
+            <mat-label>Nombre: </mat-label>
+            <input matInput placeholder="Ingresa tu nombre" formControlName="fullName" required type="text">
+            <mat-error>Debe ingresar un nombre.</mat-error>
+          </mat-form-field>
+
+          <mat-form-field class="m-2" appearance="fill">
+            <mat-label>Email: </mat-label>
+            <input matInput placeholder="Ingresa tu email" formControlName="email" required type="email">
+            <mat-error>Ingrese un email.</mat-error>
+          </mat-form-field>
+
+          <mat-form-field class="m-2" appearance="fill">
+            <mat-label>Asunto:</mat-label>
+            <input matInput placeholder="Ingrese asunto" formControlName="subject" type="text">
+            <mat-error>No mas de 100 caracteres.</mat-error>
+          </mat-form-field>
+
+
+          <mat-form-field appearance="fill">
+            <mat-label>Mensaje:</mat-label>
+            <textarea required matInput placeholder="Ingresa tu mensaje" formControlName="message"></textarea>
+          </mat-form-field>
+
+          <button type="submit" class="m-2 btn btn-info">Enviar</button>
+        </form>
+
+        <div *ngIf="sent" class="pb-5">
+          <p>Hemos enviado su mensaje</p>
+          <button mat-raised-button color="accent" (click)="sendAgain()">Enviar otro mensaje</button>
+        </div>
+      </div>
     </div>
-  </div>
 
- 
+    <h2 class="display-2 text-center mb-4">QUEDAMOS A SU DISPOSICIÓN, NO DUDE EN CONTACTARNOS!…</h2>
+
+    <div class="d-flex flex-column">
+      <div>
+        <p class="font-weight-light p-2">Dirección: Lateral Auxiliar Ruta 40, 2806, M5543, Las Heras, Mendoza</p>
+      </div>
+      <div>
+        <p class="font-weight-light p-2">Horarios de atención: Lunes a Viernes de 08:30 a 14:00 y de 15:00 a 17:30 hs.
+        </p>
+      </div>
+      <div>
+        <p class="font-weight-light p-2">Teléfono 261-4473012- Whatsapp 261-3820121</p>
+      </div>
+    </div>
+
+  </div>
 
 </div>
