--- a/src/app/pages/disa-services/disa-services.component.html
+++ b/src/app/pages/disa-services/disa-services.component.html
@@ -1,3 +1,22 @@
-<p>
-  disa-services works!
-</p>
+<div class="container d-flex flex-column">
+
+  <div class="d-flex flex-column flex-md-row">
+    <div class="img-content py-5">
+      <img class="img-fluid" src="assets/servicios/02_Seccionadora_horizontal_Marzica_Accura-32_MCaseros-750x750.jpg" alt="seccionadora horizontal">
+    </div>
+    <div class="info-content p-3 w-100 flex-fill d-flex flex-column  justify-content-center" >
+      <h5 class="lead">CONTAMOS CON UNA SECCIONADORA HORIZONTAL</h5>
+      <h2 class="display-4">PARA PRESTARLE SERVICIOS DE CORTE DE PLACAS CON MÁXIMA PRECISIÓN</h2>
+    </div>
+  </div>
+
+  <div class="d-flex flex-column flex-md-row">
+    <div class="img-content">
+      <img class="img-fluid" src="assets/servicios/Pegadora_de_canto-recortada.jpg" alt="pegadora de canto">
+    </div>
+    <div class="info-content p-3  flex-fill w-100 d-flex flex-column justify-content-center" style="background-color: rgb(240,240,237);">
+      <h5 class="lead">PEGADORA DE CANTO</h5>
+      <h2 class="display-4">LE PRESTAMOS EL SERVICIO DE PEGADO DE CANTO</h2>
+    </div>
+  </div>
+</div>
