--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,4 @@
-<p>
-  home works!
-</p>
+<div class="jumbotron d-flex flex-column align-items-md-center">
+  <h1 class="display-1">DISA Distribuciones Industriales</h1>
+  <p class="lead">Materiales para fabricar todo tipo de muebles y para la construcción en seco</p>
+</div>
