add card to home page

--- a/src/app/main-structure/footer/footer.component.html
+++ b/src/app/main-structure/footer/footer.component.html
@@ -13,7 +13,7 @@
   </div>
 
   <div>
-    <h2 class="text-center text-light">Donde econtrarnos:</h2>
+    <h2 class="text-center text-light">Donde encontrarnos:</h2>
     <div class="d-flex justify-content-center py-5">
       <a class="ml-5" target="_blank" href="https://www.facebook.com/disamaderas/?eid=ARB34pLk4Q0DDAVMOLUHLQxT6GmbQ1jVZJw4On79Jkkc2aN_F5eZ59IEXjAI-ZpAnTpqHF2hdafzD-a7"><img style="width: 45px" src="assets/icons/facebook.svg" alt="logo facebook"></a>
       <a class="ml-5" target="_blank" href="https://www.instagram.com/disainsumos.mendoza/?igshid=10a70cd8jsvc5"><img style="width: 45px" src="assets/icons/instagram.svg" alt="logo instagram"></a>
