--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,3 +2,61 @@
   <h1 class="display-1">DISA Distribuciones Industriales</h1>
   <p class="lead">Materiales para fabricar todo tipo de muebles y para la construcción en seco</p>
 </div>
+<div class="container py-5 px-3 d-flex flex-column flex-md-row flex-wrap justify-content-center align-items-center" >
+
+  <div class="card m-3" style="width: 18rem; min-width: 200px;">
+    <img src="assets/home/muchas-placas.jpg" class="card-img-top" alt="muchas placas apaquetadas en un deposito">
+    <div class="card-body">
+      <h5 class="card-title">Querés construir o remodelar?</h5>
+      <p class="card-text">En DISA contamos con una amplia variedad de Fenólicos, que suelen usarse en:</p>
+        <ul>
+          <li>~Encofrados</li>
+          <li>~Cerramientos de obra</li>
+          <li>~Entre pisos</li>
+          <li>~Muebles</li>
+          <li>~Revestimientos</li>
+          <li>~Divisiones Ver menos</li>
+          <li>— en DISA Insumos.</li>
+        </ul>
+        
+      <a href="#" class="btn btn-primary">Consultar</a>
+    </div>
+  </div>  
+
+  <div class="card m-3" style="width: 18rem; min-width: 200px;">
+    <img src="assets/home/aislantes.jpg" class="card-img-top" alt="muchas placas apaquetadas en un deposito">
+    <div class="card-body">
+      <h5 class="card-title">Querés construir o remodelar?</h5>
+      <p class="card-text">En DISA contamos con una amplia variedad de Fenólicos, que suelen usarse en:</p>
+        <ul>
+          <li>~Encofrados</li>
+          <li>~Cerramientos de obra</li>
+          <li>~Entre pisos</li>
+          <li>~Muebles</li>
+          <li>~Revestimientos</li>
+          <li>~Divisiones Ver menos</li>
+          <li>— en DISA Insumos.</li>
+        </ul>
+        
+      <a href="#" class="btn btn-primary">Consultar</a>
+    </div>
+  </div>
+
+  <div class="card m-3" style="width: 18rem; min-width: 200px;">
+    <img src="assets/home/disa-insumos.jpg" class="card-img-top" alt="muchas placas apaquetadas en un deposito">
+    <div class="card-body">
+      <h5 class="card-title">Disa Insumos</h5>
+      <p class="card-text">Te mostramos nuestro nuevo frente!!!</p>
+      <a href="#" class="btn btn-primary">Buscar</a>
+    </div>
+  </div>
+
+  <div class="card m-3" style="width: 18rem; min-width: 200px;">
+    <img src="assets/home/cortes.jpg" class="card-img-top" alt="muchas placas apaquetadas en un deposito">
+    <div class="card-body">
+      <h5 class="card-title">Cortes</h5>
+      <p class="card-text">Hacemos Cortes a medida!!!</p>
+      <a href="#" class="btn btn-primary">Buscar</a>
+    </div>
+  </div>
+</div>
