fix some errors

--- a/src/app/main-structure/header/header.component.scss
+++ b/src/app/main-structure/header/header.component.scss
@@ -1,11 +1,10 @@
 ::ng-deep {
     mat-toolbar {
-        background: rgb(0, 129, 215)!important;
+        background: #002FA7 !important;
     }
     #main-logo {
         width: 55px;
         height: 55px;
-        border-radius: 50%;
         background: white;
         overflow: hidden;
     }
