--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -21,7 +21,7 @@
 
 </div>
 
-<div class="container f-flex flex-column align-items-center">
+<div class="container  pb-3 f-flex flex-column align-items-center">
   
   <div class="row" >
     <img class="col-4 img-fluid"   src="assets/nosotros/stock-placas-01.png" alt="stock de placas">
@@ -46,7 +46,5 @@
     <img class="col-4 img-fluid"   src="assets/nosotros/adhesivo-contacto.png" alt="stock de cemento de contacto">
     <img class="col-4 img-fluid"   src="assets/nosotros/deposito-01.png" alt="deposito">
   </div>
-  <div class="row">
-    <img class="img-fluid" src="assets/nosotros/atencion-cliente.png" alt="atención al cliente">
-  </div>
+  
 </div>
