--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,8 +1,8 @@
-<div class="jumbotron d-flex flex-column align-items-md-center">
-  <h1 class="display-1">DISA Distribuciones Industriales</h1>
+<!-- <div class="jumbotron d-flex flex-column align-items-md-center">
+  <h1 class="display-2">DISA Distribuciones Industriales</h1>
   <p class="lead">Materiales para fabricar todo tipo de muebles y para la construcción en seco</p>
-</div>
-<div class="container py-5 px-3 d-flex flex-column flex-md-row flex-wrap justify-content-center align-items-center" >
+</div> -->
+<div class="container pb-5 px-3 d-flex flex-column flex-md-row flex-wrap justify-content-center align-items-center" >
 
   <div class="card m-3" style="width: 18rem; min-width: 200px;">
     <img src="assets/home/muchas-placas.jpg" class="card-img-top" alt="muchas placas apaquetadas en un deposito">
