add sales componenent

--- a/src/app/main-structure/header/header.component.html
+++ b/src/app/main-structure/header/header.component.html
@@ -3,9 +3,11 @@
     <button style="margin-top: -6px;" mat-icon-button class="example-icon d-md-none" aria-label="Example icon-button with menu icon">
       <mat-icon  (click)="toggleSidenav()">menu</mat-icon>
     </button>
-    <div id="main-logo">
-      <img class="img-fluid" src="/assets/icons/logo-disa.jpg" alt="logo Disa Distribuciones Industriales">
-    </div>
+    <a href="/">
+      <div id="main-logo">
+        <img class="img-fluid" src="/assets/icons/logo-disa.jpg" alt="logo Disa Distribuciones Industriales">
+      </div>
+    </a>
     <!-- <span class="ml-1">DISA</span> -->
   </div>
 
