--- a/src/app/main-structure/navigation-bar/navigation-bar.component.scss
+++ b/src/app/main-structure/navigation-bar/navigation-bar.component.scss
@@ -17,7 +17,9 @@
         .is-active {
             background:  #d9dcdf;
             border-radius: .2em;
-            color: #4c7deb;
+        }
+        .is-active span {
+            color: #002FA7;
         }
         .is-active span {
             font-weight: 600;
