--- a/src/app/main-structure/sidenav/sidenav.component.scss
+++ b/src/app/main-structure/sidenav/sidenav.component.scss
@@ -1,10 +1,9 @@
 ::ng-deep {
     .is-active {
-        background-color: grey;
         border-radius: .4em;
     }
     
     .is-active span {
-        color: white;
+        color: #fff;
     }
 }
