--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,7 +5,9 @@
 <div class="container pb-5 px-3 d-flex flex-column flex-md-row flex-wrap justify-content-center" >
 
   <div class="card m-3" style="width: 18rem; min-width: 200px;">
-    <img src="assets/home/disa-insumos.jpg" class="card-img-top" alt="muchas placas apaquetadas en un deposito">
+    <div class="img-container">
+      <img src="assets/home/disa-insumos.jpg" class="card-img-top" alt="muchas placas apaquetadas en un deposito">
+    </div>  
     <div class="card-body">
       <h5 class="card-title">Disa Insumos</h5>
       <p class="card-text">Te mostramos nuestro nuevo frente!!!</p>
@@ -13,7 +15,9 @@
   </div>
 
   <div class="card m-3" style="width: 18rem; min-width: 200px;">
-    <img src="assets/productos/placa-alto-brillo.jpeg" class="card-img-top" alt="muchas placas apaquetadas en un deposito">
+    <div class="img-container">
+      <img src="assets/productos/placa-alto-brillo1.jpeg" class="card-img-top img-cut" alt="muchas placas apaquetadas en un deposito">
+    </div>
     <div class="card-body">
       <h5 class="card-title">Placas de alto brillo</h5>
       <p class="card-text">En DISA podes encontrar placas de colores de alto brillo</p>
@@ -21,9 +25,11 @@
   </div>
 
   <div class="card m-3" style="width: 18rem; min-width: 200px;">
-    <img src="assets/home/muchas-placas.jpg" class="card-img-top" alt="muchas placas apaquetadas en un deposito">
+    <div class="img-container">
+      <img src="assets/home/muchas-placas.jpg" class="card-img-top img-cut" alt="muchas placas apaquetadas en un deposito">
+    </div>
     <div class="card-body">
-      <h5 class="card-title">Querés construir o remodelar?</h5>
+      <h5 class="card-title">¿Querés construir o remodelar?</h5>
       <p class="card-text">En DISA contamos con una amplia variedad de Fenólicos, que suelen usarse en:</p>
         <ul>
           <li>Encofrados</li>
