--- a/src/app/pages/new-home/components/most-important-content/most-important-content.component.html
+++ b/src/app/pages/new-home/components/most-important-content/most-important-content.component.html
@@ -1,1 +1,16 @@
-<p>most-important-content works!</p>
+<div class="main d-flex flex-column">
+    <div class="alpha d-flex flex-column justify-content-center align-items-center p-5">
+        <div class="black-content  d-flex flex-column justify-content-center align-items-center p-5">
+            <h3 class="h3 text-center">Aprovecha las ofertas de compra en linea</h3>
+            <p class="text-center">Contamos con ofertas exclusivas de compra en linea, puede ver nuestos productos aquí</p>
+            <button class="action-sales-btn">Ver Ofertas</button>
+        </div>
+    </div>
+    <div class="beta">
+        <div class="beta-content d-flex flex-column p-5 h-100 justify-content-end align-items-start">
+            <h3 class="h5">Como comprar</h3>
+            <p>Contamos con ofertas exclusivas de compra en linea, puede ver nuestos productos aquí</p>
+            <button class="action-sales-btn">Ver Ofertas</button>
+        </div>
+    </div>
+</div>
