--- a/src/app/pages/new-home/new-home.component.html
+++ b/src/app/pages/new-home/new-home.component.html
@@ -3,6 +3,8 @@
     <disa-second-content></disa-second-content>
     <disa-separator-content></disa-separator-content>
     <disa-top-categories-content></disa-top-categories-content>
-    <disa-black-content></disa-black-content>
+</div>
+<disa-black-content></disa-black-content>
+<div class="container">
     <disa-last-content></disa-last-content>
 </div>
