development black-content

--- a/src/app/pages/new-home/components/black-content/black-content.component.html
+++ b/src/app/pages/new-home/components/black-content/black-content.component.html
@@ -1,1 +1,23 @@
-<p>balck-content works!</p>
+<div class="mainbox d-flex flex-column flex-md-row">
+    <div class="firstcontent p-5 w-100 mb-1">
+        <div class="text d-flex justify-content-center text-center">
+            <p class="content h4">{{text1}}</p>
+        </div>
+
+        <div class="link d-flex justify-content-center">
+            <a href="#" class="text-uppercase text-center pt-2">Comprar ahora</a>
+        </div>
+        
+    </div>
+    <div class="secondcontent p-5 w-100 ">
+        <div class="text d-flex justify-content-center text-center">
+            <p class="content h4">{{text2}}</p>
+        </div>
+
+        <div class="link d-flex justify-content-center ">
+            <a href="#" class="text-uppercase text-center pt-2">Conócenos</a>
+        </div>
+    </div>
+</div>
+
+
