development top categories

--- a/src/app/pages/new-home/components/most-important-content/most-important-content.component.html
+++ b/src/app/pages/new-home/components/most-important-content/most-important-content.component.html
@@ -1,4 +1,4 @@
-<div class="main d-flex flex-column">
+<div class="main d-flex flex-column container">
     <div class="alpha d-flex flex-column justify-content-center align-items-center p-5">
         <div class="black-content  d-flex flex-column justify-content-center align-items-center p-5">
             <h3 class="h3 text-center">Aprovecha las ofertas de compra en linea</h3>
