--- a/src/app/pages/new-home/components/separator-content/separator-content.component.html
+++ b/src/app/pages/new-home/components/separator-content/separator-content.component.html
@@ -1,4 +1,4 @@
-<div class="separator p-4 d-flex flex-column justify-content-center align-items-center mt-2">
-    <p class="h4 text-center p-2 bd-highlight">{{ text }}</p>
+<div class="separator p-4 d-flex flex-column justify-content-center align-items-center mt-2 container w-100">
+    <p class="h4 text-center p-2 bd-highlight w-100">{{ text }}</p>
     <button class="button action-sales-btn mt-2">Comprar</button>
 </div>
