--- a/src/app/pages/new-home/components/second-content/second-content.component.html
+++ b/src/app/pages/new-home/components/second-content/second-content.component.html
@@ -4,8 +4,8 @@
 
     <!-- firs row  -->
     <div class="firs-row d-flex flex-column flex-md-row">
-        <div class="item d-flex flex-row w-100 mt-3 mr-3" *ngFor="let item of items1; let i = index;">
-            <div class="figure"  style="max-width: 45%;">
+        <div class="item d-flex flex-row w-100 mt-3" *ngFor="let item of items1; let i = index;">
+            <div class="figure"  style="max-width: 45%; height: 140px; overflow: hidden;">
                 <img class="img-fluid"   [src]="'/assets/' + item.img " [alt]="item.title">
             </div>
             <div class="item-content p-3" >
@@ -18,8 +18,8 @@
 
     <!-- second row -->
     <div class="second-row d-flex flex-column flex-md-row">
-        <div class="item d-flex flex-row w-100 mt-3 mr-3" *ngFor="let item of items2; let i = index;">
-            <div class="figure"  style="max-width: 40%;">
+        <div class="item d-flex flex-row w-100 mt-3" *ngFor="let item of items2; let i = index;">
+            <div class="figure"  style="max-width: 45%; height: 140px; overflow: hidden;">
                 <img class="img-fluid"   [src]="'/assets/' + item.img " [alt]="item.title">
             </div>
             <div class="item-content p-3" >
@@ -31,7 +31,7 @@
     </div>
 
     <!-- two image box -->
-    <div class="two-image-content  d-flex flex-column  flex-md-row">
+    <div class="two-image-content  d-flex flex-column  flex-md-row mt-3">
         <div class="first-image position-relative w-100">
             <figure style="height: 233px; overflow: hidden;">
                 <img class="img-fluid"   [src]="'/assets/' + image[0].img " [alt]="image[0].title">
